syntax = "proto3";

package dddcli;

message User {
  int64 id = 1;
  int64 created_at = 2;
  string name = 3;
}

message GetUsersReq {
  int64 id = 1;
  string name = 2;
  int32 offset = 3;
  int32 limit = 4;
}

message GetUsersResp {
  int64 count = 1;
  repeated User users = 2;
}

service DDDService {
  rpc GetUsers(GetUsersReq) returns (GetUsersResp);
}
